--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
       </div>
     </div>
     <div class="content">
+      <p>content.</p>
       <div class="left">
+        <p>left.</p>
         <div class="aboutBox">
+          <p>aboutbox.</p>
         </div>
       </div>
     </div>
