--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <div class="content">
       <p>content.</p>
-      <div class="left">
+      <div class="leftContent">
         <p>left.</p>
         <div class="aboutBox">
           <p>aboutbox.</p>
