--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="content">
       <p>content.</p>
       <div class="leftContent">
-        <p>left.</p>
+        <p>leftcontent.</p>
         <div class="aboutBox">
           <p>aboutbox.</p>
         </div>
