--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
       </div>
     </div>
     <div class="content">
-      <p>content.</p>
       <div class="leftContent">
         <p>leftcontent.</p>
         <div class="aboutBox">
           <p>aboutbox.</p>
         </div>
+      </div>
+      <div class="middleContent">
+        <p>middlecontent.</p>
       </div>
     </div>
   </body>
