--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
       <div class="middleContent">
         <p>middlecontent.</p>
       </div>
+      <div class="rightContent">
+        <p>rightcontent.</p>
+      </div>
     </div>
   </body>
 </html>
