--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-    <div class="banner">
-      <div id="banner" class="bannerStyle">
+    <div class="bannerStyle">
         <p>banner.</p>
       </div>
     </div>
