--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     </div>
     <div class="content">
-      <div class="leftContent">
+      <div class="leftttContent">
         <p>leftcontent.</p>
       </div>
       <div class="middleContent">
