--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     </div>
     </div>
     <div class="content">
-      <div class="leftttContent">
-        <p>leftcontent.</p>
+      <div class="leftContent">
+        <p>leftcontenttt.</p>
       </div>
       <div class="middleContent">
         <p>middlecontent.</p>
