--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
     <div class="content">
       <div class="leftContent">
-        <p>leftcontenttt.</p>
+        <p>leftcontent.</p>
       </div>
       <div class="middleContent">
         <p>middlecontent.</p>
