--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
       </div>
       <div class="middleContent">
         <p>middlecontent.</p>
+        <div class="middleInfo">
+          <p>infoinfoinfoinfo</p>
+        </div>
       </div>
       <div class="rightContent">
         <p>rightcontent.</p>
