--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="middleContent">
         <p>middlecontent.</p>
         <div class="middleInfo">
-          <p>infoinfoinfoinfo</p>
+          <p>infoinfoinfoinfoinfoinfoinfoinfoinfoinfo</p>
         </div>
       </div>
       <div class="rightContent">
