--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
       </div>
       <div class="rightContent">
         <p>rightcontent.</p>
+        <div class="rightUpdate">
+        </div>
       </div>
     </div>
   </body>
