--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <div class="rightContent">
         <p>rightcontent.</p>
         <div class="rightUpdate">
+          <p>this is the update box.</p>
         </div>
       </div>
     </div>
