--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <div class="middleContent">
         <p>middlecontent.</p>
         <div class="middleInfo">
+          <h2>welcome!</h2>
           <p>info.</p>
         </div>
       </div>
