--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     
     <link rel="stylesheet" href="styles.css" type="text/css" media="all">
-    <title>cece's page</title>
+    <title>internet prince</title>
      
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
