--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <div class="content">
       <div class="leftContent">
         <p>leftcontent.</p>
+        <div class="aboutBox">
+          <p>webmaster.</p>
+        </div>
       </div>
       <div class="middleContent">
         <p>middlecontent.</p>
