--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="bannerStyle">
-        <p>banner.</p>
+        <img class="bannerStyle" src=""/>
     </div>
     </div>
     <div class="content">
