--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="bannerStyle">
-        <img class="bannerStyle" src=""/>
+        <img class="bannerStyle" src="https://files.strawcdn.com/straw/eKryPgCfvXsMAtfhZBFi.jpeg"/>
     </div>
     </div>
     <div class="content">
