--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         <div class="rightUpdate">
           <p>this is the update box.</p>
         </div>
+        <div class="rightNavigation">
+          <p>this is the navigation box.</p>
+          <p>still navigation.</p>
       </div>
     </div>
   </body>
