--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <div class="rightNavigation">
           <p>this is the navigation box.</p>
           <p>still navigation.</p>
+        </div>
       </div>
     </div>
   </body>
