--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <div class="content">
       <div class="leftContent">
         <p>leftcontent.</p>
+        <div class="aboutPicture">
+          <p>pic.</p>
+        </div>
         <div class="aboutBox">
           <p>webmaster.</p>
         </div>
