--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <div class="bannerStyle">
+      <p>banner.</p>
     </div>
     <div class="content">
       <div class="leftContent">
