--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <p>middlecontent.</p>
         <div class="middleInfo">
           <h2>welcome!</h2>
-          <p>info.</p>
+          <p>this is my website. info info.</p>
         </div>
       </div>
       <div class="rightContent">
