--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
           <h2>welcome!</h2>
           <p>this is my website. info info.</p>
         </div>
+        <div class="containStampStyle">
+          <p>stamp stamp stamp stamp stamp</p>
+        </div>
       </div>
       <div class="rightContent">
         <p>rightcontent.</p>
