--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <p>pic.</p>
         </div>
         <div class="aboutBox">
-          <p>webmaster.</p>
+          <p>webmaster. <br> webmaster info. <br> web.</p>
         </div>
       </div>
       <div class="middleContent">
