--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         <div class="aboutBox">
           <p>webmaster. <br> webmaster info. <br> web.</p>
         </div>
+        <div class="featuredBox">
+          <p>featured.</p>
+        </div>
       </div>
       <div class="middleContent">
         <p>middlecontent.</p>
