--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <a href="https://www.imood.com/users/internetprince"><img src="https://moods.imood.com/display/uname-internetprince/fg-99CCFF/bg-99CCFF/trans-1/imood.gif" border="0"></a>
         <div class="aboutBox">
-          <p>webmaster. <br> webmaster info. <br> web.</p>
+          <p>webmaster. <br> info. <br> info. <br> info.</p>
         </div>
         <div class="featuredBox">
           <p>featured.</p>
