--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         <div class="aboutBox">
           <p>webmaster. <br> info. <br> info. <br> info.</p>
         </div>
+        <div class="buttonBox">
+          <p>button button button</p>
+        </div>
         <div class="featuredBox">
           <p>featured.</p>
         </div>
