--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="aboutBox">
           <p>webmaster. <br> info. <br> info. <br> info.</p>
         </div>
-        <div class="buttonBox">
+        <div class="containButtonStyle">
           <p>button button button</p>
         </div>
         <div class="featuredBox">
