--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         </div>
         <div class="containButtonStyle">
           <p>button button button</p>
+          <img class="" src="">
         </div>
         <div class="featuredBox">
           <p>featured.</p>
