--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div class="containButtonStyle">
           <p>button button button</p>
-          <img class="" src="">
+          <img class="buttonStyle" src="">
         </div>
         <div class="featuredBox">
           <p>featured.</p>
