--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <div class="containButtonStyle">
           <p>button button button</p>
           <img class="buttonStyle" src="https://files.strawcdn.com/straw/zFlEUqEUtgAFAKJkpNNZ.gif">
+          <img class="buttonStyle" src="https://files.strawcdn.com/straw/UKBzIjMANNvdVlZWLrLl.gif">
         </div>
         <div class="featuredBox">
           <p>featured.</p>
