--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
     <div class="content">
       <div class="leftContent">
         <p>leftcontent.</p>
-        <div class="aboutPicture">
-          <p>pic.</p>
-        </div>
-        <a href="https://www.imood.com/users/internetprince"><img src="https://moods.imood.com/display/uname-internetprince/fg-EFF7FA/bg-EFF7FA/trans-1/imood.gif" border="0"></a>
         <div class="aboutBox">
+          <p>webmaster</p>
+         <div class="aboutPicture">
+          <p>pic.</p>
+         </div>
+         <a href="https://www.imood.com/users/internetprince"><img src="https://moods.imood.com/display/uname-internetprince/fg-EFF7FA/bg-EFF7FA/trans-1/imood.gif" border="0"></a>
           <p>webmaster. <br> info. <br> info. <br> info.</p>
         </div>
         <div class="containButtonStyle">
