--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <div class="containButtonStyle">
           <img class="buttonStyle" src="https://files.strawcdn.com/straw/zFlEUqEUtgAFAKJkpNNZ.gif">
           <img class="buttonStyle" src="https://files.strawcdn.com/straw/UKBzIjMANNvdVlZWLrLl.gif">
+          <img class="buttonStyle" src="https://files.strawcdn.com/straw/FmPyRzsluFUbLtKvkxwA.gif">
         </div>
         <div class="featuredBox">
           <p>featured.</p>
