--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
         <div class="rightUpdate">
           <p>this is the update box.</p>
         </div>
+        <div class="rightToDo">
+          <p>todolist</p>
+        </div>
       </div>
     </div>
   </body>
