--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
       </div>
       <div class="rightContent">
         <p>rightcontent.</p>
-        <div class="rightNavigation">
+        <nav class="rightNavigation">
           <p>this is the navigation box.</p>
           <p>still navigation.</p>
-        </div>
+        </nav>
         <div class="rightUpdate">
           <p>this is the update box.</p>
         </div>
