--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
           <h2>welcome!</h2>
           <p>this is my website. info info.</p>
         </div>
-        <div class="containStampStyle">
+        <marquee class="containStampStyle" direction="left">
           <p>stamp stamp stamp stamp stamp</p>
-        </div>
+        </marquee>
       </div>
       <div class="rightContent">
         <p>rightcontent.</p>
