--- a/index.html
+++ b/index.html
@@ -46,7 +46,11 @@
         <p>rightcontent.</p>
         <nav class="rightNavigation">
           <p>this is the navigation box.</p>
-          <p>still navigation.</p>
+          <ul>
+            <li><a href="">name</a></li>
+            <li><a href="">name</a></li>
+            <li><a href="">name</a></li>
+          </ul>
         </nav>
         <div class="rightUpdate">
           <p>this is the update box.</p>
