--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <p>rightcontent.</p>
         <nav class="rightNavigation">
           <p>this is the navigation box.</p>
-          <ul>
+          <ul class="listNavigation">
             <li><a href="">name</a></li>
             <li><a href="">name</a></li>
             <li><a href="">name</a></li>
