--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     </div>
     <div class="content">
       <div class="leftContent">
-        <p>leftcontent.</p>
         <div class="aboutBox">
+          <p>webmaster</p>
          <div class="aboutPicture">
           <p>pic.</p>
          </div>
