--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
     </div>
     <div class="content">
       <div class="leftContent">
-        <div class="aboutBox">
-          <p>webmaster</p>
-         <div class="aboutPicture">
-          <p>pic.</p>
+        <div class="cloudBorder">
+         <div class="aboutBox">
+           <p>webmaster</p>
+          <div class="aboutPicture">
+           <p>pic.</p>
          </div>
          <a href="https://www.imood.com/users/internetprince"><img src="https://moods.imood.com/display/uname-internetprince/fg-485158/bg-EFF7FA/trans-1/imood.gif" border="0"></a>
           <p>webmaster. <br> info. <br> info. <br> info.</p>
+         </div>
         </div>
         <div class="containButtonStyle">
           <img class="buttonStyle" src="https://files.strawcdn.com/straw/zFlEUqEUtgAFAKJkpNNZ.gif">
