--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
           <img class="buttonStyle" src="https://files.strawcdn.com/straw/UKBzIjMANNvdVlZWLrLl.gif">
           <img class="buttonStyle" src="https://files.strawcdn.com/straw/FmPyRzsluFUbLtKvkxwA.gif">
         </div>
-        <div class="featuredBox">
-          <p>featured.</p>
+        <div class="cloudBorder">
+         <div class="featuredBox">
+           <p>featured.</p>
+         </div>
         </div>
       </div>
       <div class="middleContent">
