--- a/index.html
+++ b/index.html
@@ -56,11 +56,13 @@
             <li><a href="">name</a></li>
           </ul>
         </nav>
-        <div class="rightUpdate">
-          <p>this is the update box.</p>
-        </div>
-        <div class="rightToDo">
-          <p>todolist</p>
+        <div class="cloudBorder">
+         <div class="rightUpdate">
+           <p>this is the update box.</p>
+         </div>
+         <div class="rightToDo">
+           <p>todolist</p>
+         </div>
         </div>
       </div>
     </div>
